2021-09-01  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.2-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.2-alpha06: Foo Fighters';git push
	git tag -a 5.0.2-alpha06 -m 'ncclimo/ncremap: mem_mb=0, srun; ';git push --tags

	* Add library/bm rcd support for upcoming netCDF versions 4.8.3, 4.8.4

	* Link to and successfully test newly released netCDF 4.8.1

	* ncclimo/ncremap update E3SMU paths to _latest and acme1 paths to /home/zender1

2021-08-31  Charlie Zender  <zender@uci.edu>

	* ncclimo change interactive compute node access from salloc to srun to avoid Compy issues

2021-08-30  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo change mem_mb default from 20000 to 0 (indicates unlimited RAM)

2021-08-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.2-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.2-alpha05: HPV';git push
	git tag -a 5.0.2-alpha05 -m 'autoconf nco_c++=no; ncclimo/ncremap: /usr/bin/env bash, .h5m, p.h5m';git push --tags

	* ncremap HOSTNAME-dependent partition commands for compy, non

	* ncremap print sample map examination commands

	* ncclimo/ncremap: start scripts with #!/usr/bin/env bash instead of #!/bin/bash

	* ncremap partition .h5m to p.h5m

	* ncremap convert .g to .h5m

2021-08-27  Charlie Zender  <zender@uci.edu>

	* ncremap add stubs to convert .g to .h5m

2021-08-26  Charlie Zender  <zender@uci.edu>

	* configure.ac default --enable-nco_cxx to, remove have_valarray check, regain libnco_c++ build option

2021-08-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.2-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.2-alpha04: Gluten Free';git push
	git tag -a 5.0.2-alpha04 -m 'ncclimo: var_lst rx;ncks nfr west_east/south_north';git push --tags

	* nco.texi ANNOUNCE documentation for 5.0.2

2021-08-24  Charlie Zender  <zender@uci.edu>

	* nco_grd_nfr() add west_east and south_north to coordinate database

2021-08-23  Charlie Zender  <zender@uci.edu>
